--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -3,7 +3,9 @@ name: Hot News Crawler
 on:
   schedule:
     # 我们使用的是 github 官方提供的资源来进行的推送，而每个账号的资源是限额的，为了不被官方判定为滥用而面临封号的风险，不建议比半小时更低
-    - cron: "0 0,12 * * *" 
+    # 北京时间 08:00、10:00、12:00、14:00、16:00、18:00、20:00、22:00 各跑一次
+    # 对应 UTC 00:00、02:00、04:00、06:00、08:00、10:00、12:00、14:00
+    - cron: "0 0-14/2 * * *"
     # - cron: "0 * * * *" # 每小时整点运行一次(实际有偏差) 或者 "*/30 * * * *" (每半小时执行一次) 或者 "*/30 0-14 * * *"(每天早上 8 点到晚上 10 点期间，每半小时运行一次)
   workflow_dispatch:
 
